Adapting to a Dinosaur.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
-    <string name="app_name">Lego Rovers (Education Set)</string>
+    <string name="app_name">Lego Dinos (Education Set)</string>
 
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
 
-    <string name="title_activity_connect_page">Lego Rovers (Education Set)</string>
+    <string name="title_activity_connect_page">Lego Dinos (Education Set)</string>
 
     <string-array name="delay_items">
         <item>Instant</item>
@@ -38,6 +38,7 @@
     <string-array name="rule_options">
         <item>Nothing</item>
         <item>Stop</item>
+        <item>Bite</item>
         <item>Forward</item>
         <item>Forward a bit</item>
         <item>Back</item>
